--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ CaveStory/mods/autumns_various_additions/settings.ini
 SeaTone/tone.ini
 CaveStory/Profile - Copy.dat
 CaveStory/Profile.FMOD.dat
+!external/fmod/lib
+!CaveStory/ava/config
