--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ CaveStory/Profile.FMOD.dat
 !external/fmod/lib/fmod_vc.lib
 !external/fmod/lib/fmodstudio_vc.lib
 !CaveStory/ava/config
+!CaveStory/mods/autpi/autpi.dll
