fmod built-in parameter stuff + autpi changes

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ CaveStory/Profile.FMOD.dat
 !external/fmod/lib/fmodstudio_vc.lib
 !CaveStory/ava/config
 !CaveStory/mods/autpi/autpi.dll
+CaveStory/Doukutsu.exe.blbkp
