--- a/CaveStory/ava/config/fmod.ini
+++ b/CaveStory/ava/config/fmod.ini
@@ -13,3 +13,9 @@ Title Screen Music [Running Hell] (FMOD)= event:/Null/null0000
 Title Screen Music [Torokos Theme] (FMOD)= event:/Null/null0000
 Title Screen Music [White] (FMOD)= event:/Null/null0000
 Title Screen Music [Safety] (FMOD)= event:/Null/null0000
+
+[Parameter]
+# If this is set to true, npcs 96, 97, 98, and 99 (the fans) will be replaced with the same code functionally, but they set the fmod parameter "isInWind".
+# The customizable fans already do this if fmod is enabled.
+# This is optional, only enable it if you know you arent using ASM hacks that would touch this code.
+Replace Fan NPC code= false
