--- a/CaveStory/ava/config/graphics.ini
+++ b/CaveStory/ava/config/graphics.ini
@@ -48,11 +48,11 @@ Money Hud X Number Offset= 16
 
 # The Number Offsets for the collectables is how offset the numbers are to the right of the collectables icon (found in AutumnUI)
 
-Enable Collectables UI A= false
-Enable Collectables UI B= false
-Enable Collectables UI C= false
-Enable Collectables UI D= false
-Enable Collectables UI E= false
+Enable Collectables UI A= true
+Enable Collectables UI B= true
+Enable Collectables UI C= true
+Enable Collectables UI D= true
+Enable Collectables UI E= true
 
 Collectables A (X Position)= 8
 Collectables A (Y Position)= 56
