Functional AVA lua api, removed pause menu from AVA

--- a/CaveStory/ava/config/main.ini
+++ b/CaveStory/ava/config/main.ini
@@ -51,3 +51,6 @@ Enable Custom NPC Table Loading= false
 
 # Reset the "npc.tbl" file to the default one in /data/ when returning to ModeOpening. Only functions if Custom npc.tbl files are enabled.
 Enable npc.tbl Reloading on Reset= false
+
+[Extra]
+Enable AVA Pause Additions = true
