--- a/CaveStory/ava/config/tsc.ini
+++ b/CaveStory/ava/config/tsc.ini
@@ -41,7 +41,7 @@ Default Head.tsc name= Head
 [Money]
 # Enables money to spawn from entities if they spawn EXP.
 # EXP will still spawn, and the amount of money you get is the npc's EXP divided by 2.
-Enable Money Code= false
+Enable Money Code= true
 
 # Enemies will not drop money when "Enable Money Code" is set to true
 Disable Money from Entities= false
