--- a/mod.vcxproj.filters
+++ b/mod.vcxproj.filters
@@ -6,7 +6,6 @@
     <ClCompile Include="src\BKG.cpp" />
     <ClCompile Include="src\CollabFlag.cpp" />
     <ClCompile Include="src\Collectables.cpp" />
-    <ClCompile Include="src\Config.cpp" />
     <ClCompile Include="src\Draw.cpp" />
     <ClCompile Include="src\Entity.cpp" />
     <ClCompile Include="src\EntityLoad.cpp" />
@@ -22,7 +21,6 @@
     <ClCompile Include="src\MyChar.cpp" />
     <ClCompile Include="src\MycParam.cpp" />
     <ClCompile Include="src\NpcReplacements.cpp" />
-    <ClCompile Include="src\PauseScreen.cpp" />
     <ClCompile Include="src\Profile.cpp" />
     <ClCompile Include="src\Respawn.cpp" />
     <ClCompile Include="src\Stage.cpp" />
@@ -58,6 +56,23 @@
     <ClCompile Include="src\lua\Lua_Var.cpp">
       <Filter>lua</Filter>
     </ClCompile>
+    <ClCompile Include="src\lua\Lua_Physics.cpp">
+      <Filter>lua</Filter>
+    </ClCompile>
+    <ClCompile Include="src\lua\Lua_Collectables.cpp">
+      <Filter>lua</Filter>
+    </ClCompile>
+    <ClCompile Include="src\lua\Lua_Money.cpp">
+      <Filter>lua</Filter>
+    </ClCompile>
+    <ClCompile Include="src\lua\Lua_Frame.cpp">
+      <Filter>lua</Filter>
+    </ClCompile>
+    <ClCompile Include="src\lua\Lua_CPXE.cpp">
+      <Filter>lua</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Config.cpp" />
+    <ClCompile Include="src\API_Pause.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\ASMLoader.h" />
@@ -66,7 +81,6 @@
     <ClInclude Include="src\cave_story.h" />
     <ClInclude Include="src\CollabFlag.h" />
     <ClInclude Include="src\Collectables.h" />
-    <ClInclude Include="src\Config.h" />
     <ClInclude Include="src\Draw.h" />
     <ClInclude Include="src\Entity.h" />
     <ClInclude Include="src\EntityLoad.h" />
@@ -82,7 +96,6 @@
     <ClInclude Include="src\MyChar.h" />
     <ClInclude Include="src\MycParam.h" />
     <ClInclude Include="src\NpcReplacements.h" />
-    <ClInclude Include="src\PauseScreen.h" />
     <ClInclude Include="src\Profile.h" />
     <ClInclude Include="src\Respawn.h" />
     <ClInclude Include="src\Stage.h" />
@@ -119,6 +132,23 @@
     <ClInclude Include="src\lua\Lua_Var.h">
       <Filter>lua</Filter>
     </ClInclude>
+    <ClInclude Include="src\lua\Lua_Physics.h">
+      <Filter>lua</Filter>
+    </ClInclude>
+    <ClInclude Include="src\lua\Lua_Collectables.h">
+      <Filter>lua</Filter>
+    </ClInclude>
+    <ClInclude Include="src\lua\Lua_Money.h">
+      <Filter>lua</Filter>
+    </ClInclude>
+    <ClInclude Include="src\lua\Lua_Frame.h">
+      <Filter>lua</Filter>
+    </ClInclude>
+    <ClInclude Include="src\lua\Lua_CPXE.h">
+      <Filter>lua</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Config.h" />
+    <ClInclude Include="src\API_Pause.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="library">
