<BKG now uses yamls, and <BKG lua api exists

--- a/CaveStory/mods/autpi/settings.ini
+++ b/CaveStory/mods/autpi/settings.ini
@@ -1,5 +1,5 @@
 # Doesn't output an error about "main.lua" missing.
-Ignore 'Missing main.lua' error = true
+Ignore 'Missing main.lua' error = false
 
 # Writes "arms_level.tbl", "bullet.tbl", and "caret.tbl" to the folder the exe is in.
 # Useful if you're a modder and dont want to manually edit the bullet.tbl.
