--- a/mod.vcxproj
+++ b/mod.vcxproj
@@ -52,7 +52,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;EXAMPLE_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;WIN32;_DEBUG;_WINDOWS;_USRDLL;EXAMPLE_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>external\lua\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <WarningLevel>Level3</WarningLevel>
@@ -70,7 +70,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;EXAMPLE_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;WIN32;NDEBUG;_WINDOWS;_USRDLL;EXAMPLE_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>external\lua\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <WarningLevel>Level3</WarningLevel>
@@ -113,6 +113,7 @@
     <ClCompile Include="src\library\tinyxml2.cpp" />
     <ClCompile Include="src\LoadPixtone.cpp" />
     <ClCompile Include="src\lua\Lua.cpp" />
+    <ClCompile Include="src\lua\Lua_BKG.cpp" />
     <ClCompile Include="src\lua\Lua_Collectables.cpp" />
     <ClCompile Include="src\lua\Lua_CPXE.cpp" />
     <ClCompile Include="src\lua\Lua_Frame.cpp" />
@@ -166,6 +167,7 @@
     <ClInclude Include="src\library\tinyxml2.h" />
     <ClInclude Include="src\LoadPixtone.h" />
     <ClInclude Include="src\lua\Lua.h" />
+    <ClInclude Include="src\lua\Lua_BKG.h" />
     <ClInclude Include="src\lua\Lua_Collectables.h" />
     <ClInclude Include="src\lua\Lua_CPXE.h" />
     <ClInclude Include="src\lua\Lua_Frame.h" />
