remove collab mode entirely, and other things
*SAVEDATA WILL BREAK*

--- a/mod.vcxproj
+++ b/mod.vcxproj
@@ -95,7 +95,6 @@
     <ClCompile Include="src\AutPI.cpp" />
     <ClCompile Include="src\AVA_API.cpp" />
     <ClCompile Include="src\BKG.cpp" />
-    <ClCompile Include="src\CollabFlag.cpp" />
     <ClCompile Include="src\Collectables.cpp" />
     <ClCompile Include="src\Config.cpp" />
     <ClCompile Include="src\DialogueChoice.cpp" />
@@ -133,13 +132,12 @@
     <ClCompile Include="src\Stage.cpp" />
     <ClCompile Include="src\SurfaceDefines.cpp" />
     <ClCompile Include="src\TextScript.cpp" />
-    <ClCompile Include="src\TextScriptCollabLoad.cpp" />
+    <ClCompile Include="src\TextScriptCustomLoad.cpp" />
     <ClCompile Include="src\TextScriptVAR.cpp" />
     <ClCompile Include="src\TileCollisionBoss.cpp" />
     <ClCompile Include="src\TileCollisionBullet.cpp" />
     <ClCompile Include="src\TileCollisionMyChar.cpp" />
     <ClCompile Include="src\TileCollisionEntity.cpp" />
-    <ClCompile Include="src\XMLLoad.cpp" />
     <ClCompile Include="src\\mod_loader.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -150,7 +148,6 @@
     <ClInclude Include="src\AVA_API.h" />
     <ClInclude Include="src\BKG.h" />
     <ClInclude Include="src\cave_story.h" />
-    <ClInclude Include="src\CollabFlag.h" />
     <ClInclude Include="src\Collectables.h" />
     <ClInclude Include="src\Config.h" />
     <ClInclude Include="src\DialogueChoice.h" />
@@ -188,13 +185,12 @@
     <ClInclude Include="src\Stage.h" />
     <ClInclude Include="src\SurfaceDefines.h" />
     <ClInclude Include="src\TextScript.h" />
-    <ClInclude Include="src\TextScriptCollabLoad.h" />
+    <ClInclude Include="src\TextScriptCustomLoad.h" />
     <ClInclude Include="src\TextScriptVAR.h" />
     <ClInclude Include="src\TileCollisionBoss.h" />
     <ClInclude Include="src\TileCollisionBullet.h" />
     <ClInclude Include="src\TileCollisionMyChar.h" />
     <ClInclude Include="src\TileCollisionEntity.h" />
-    <ClInclude Include="src\XMLLoad.h" />
     <ClInclude Include="src\\mod_loader.h" />
     <ClInclude Include="src\\mod_loader_hooks.h" />
   </ItemGroup>
