--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,8 @@ CaveStory/mods/autumns_various_additions/settings.ini
 SeaTone/tone.ini
 CaveStory/Profile - Copy.dat
 CaveStory/Profile.FMOD.dat
+!external/lua/lib/lua.lib
+!external/yaml-cpp/lib/yaml-cpp.lib
 !external/fmod/lib/fmod_vc.lib
 !external/fmod/lib/fmodstudio_vc.lib
 !CaveStory/ava/config
